Fix header shifting

--- a/packages/webapp/styles/components/AppBar.scss
+++ b/packages/webapp/styles/components/AppBar.scss
@@ -7,7 +7,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: var(--sl-spacing-medium);
+  padding-inline: var(--sl-spacing-medium);
+  padding-block: var(--sl-spacing-x-small);
+  min-height: 4.5rem;
 
   .site {
     display: flex;
